--- a/annotation-file-utilities/tests/Makefile
+++ b/annotation-file-utilities/tests/Makefile
@@ -26,7 +26,7 @@ DIFFS := $(patsubst %.goal, %.diff, $(FILTERED))
 
 DEBUG :=
 # Use this to enable some debugging.
-# DEBUG := --debug
+DEBUG := --debug
 
 default : all
 
