--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,4 +1,13 @@
 jobs:
+- job: like_travis_build_without_test_jdk8
+  pool:
+    vmImage: 'ubuntu-16.04'
+  container: mdernst/ubuntu-for-cf-jdk8:latest
+  steps:
+  - checkout: self
+    fetchDepth: 25
+  - bash: ./.travis-build-without-test.sh
+    displayName: .travis-build-without-test.sh
 - job: ant_test_jdk8
   pool:
     vmImage: 'ubuntu-16.04'
