--- a/global.build.properties
+++ b/global.build.properties
@@ -17,12 +17,8 @@ afu : ${annotation-tools}/annotation-file-utilities
 asmx : ${annotation-tools}/asmx
 scene-lib : ${annotation-tools}/scene-lib
 
-# Compiler.  For annotations-compiler builds, use:   antfile="make/build.xml"
-annotations-compiler : ${workspace}/jsr308-langtools
-annotations-compiler-jar : ${annotations-compiler}/cfmake/javac.jar
-annotations-compiler-jdk-jar : ${annotations-compiler}/cfmake/javac-jdk.jar
-
-annotations-disassembler : ${workspace}/jsr308-langtools
+annotations-compiler-jar : ${afu}/lib/javac.jar
+annotations-compiler-jdk-jar : ${afu}/lib/javac-jdk.jar
 
 # Other tools
 checkerframework : ${workspace}/checker-framework
