--- a/annotation-file-utilities/build.gradle
+++ b/annotation-file-utilities/build.gradle
@@ -14,6 +14,7 @@ group 'org.checkerframework'
 version '1.0-SNAPSHOT'
 
 sourceCompatibility = 1.8
+ext.release = false
 
 repositories {
     mavenCentral()
@@ -78,15 +79,15 @@ compileJava {
 shadowJar {
     destinationDirectory = projectDir
     archiveVersion = null
-
-    // These appear in annotation-file-utilities-all.jar:
-    relocate 'org.apache', 'org.checkerframework.org.apache'
-    relocate 'org.relaxng', 'org.checkerframework.org.relaxng'
-    relocate 'org.plumelib', 'org.checkerframework.org.plumelib'
-    // relocate 'sun', 'org.checkerframework.sun'
-    relocate 'org.objectweb.asm', 'org.checkerframework.org.objectweb.asm'
-    relocate 'com.google', 'org.checkerframework.com.google'
-    relocate 'plume', 'org.checkerframework.plume'
+    doFirst {
+        if (release) {
+            relocate 'org.apache', 'org.checkerframework.org.apache'
+            relocate 'org.relaxng', 'org.checkerframework.org.relaxng'
+            relocate 'org.plumelib', 'org.checkerframework.org.plumelib'
+            relocate 'org.objectweb.asm', 'org.checkerframework.org.objectweb.asm'
+            relocate 'com.google', 'org.checkerframework.com.google'
+        }
+    }
 }
 
 test {
@@ -165,7 +166,8 @@ task checkBasicStyle(group: 'Format') {
                                   'build',
                                   'jdk',
                                   'asmx',
-                                  'javadoc']
+                                  'javadoc',
+    "test"]
 
     String[] ignoreFilePatterns = [
             '*.aux',
