--- a/annotation-file-utilities/build.gradle
+++ b/annotation-file-utilities/build.gradle
@@ -129,8 +129,6 @@ task testExample(dependsOn: compileTestJava) {
                     "foo.Bar",
                     "${testDir}/example-output.jaif"]
         }
-        File outputGoal = new File(testDir, "example-output.jaif.goal");
-        File output = new File(testDir, "example-output.jaif");
 
         byte[] goalJaif = Files.readAllBytes(new File(testDir, "example-output.jaif.goal").toPath());
         byte[] outputJaif = Files.readAllBytes(new File(testDir, "example-output.jaif").toPath());
@@ -143,6 +141,14 @@ task testExample(dependsOn: compileTestJava) {
         if (!Arrays.equals(goalStdOut, stdOut)) {
             throw new GradleException("In ${testDir}, file example-stdout.jaif does not match goal.")
         }
+    }
+}
+
+task cleanTestExample {
+    doLast{
+        String testDir = '../scene-lib/test/annotations/tests/executable/'
+        delete "${testDir}/example-output.jaif"
+        delete "${testDir}/example-stdout.jaif"
     }
 }
 
@@ -388,6 +394,42 @@ artifacts {
 }
 
 clean {
-    dependsOn(cleanTestAnnotator, cleanAnnotationFileFormat)
+    dependsOn(cleanTestAnnotator, cleanAnnotationFileFormat, cleanTestExample)
     delete('annotation-file-utilities-all.jar', 'annotation-tools.zip')
+}
+
+ext.tmpAnnotationTools = "${buildDir}/tmp-annotation-tools"
+task updateWorkspace {
+    description 'Copy files from repository to temporary directory from which they will be packaged up.'
+    doLast {
+        delete tmpAnnotationTools
+        exec {
+            executable 'git'
+            args = [
+                    'clone',
+                    '../',
+                    "${tmpAnnotationTools}"
+            ]
+        }
+        delete "${tmpAnnotationTools}/scene-lib.orig-hand-annos"
+        delete "${tmpAnnotationTools}/.git"
+        delete "${tmpAnnotationTools}/.gitignore"
+        delete "${tmpAnnotationTools}/.hg_archival.txt"
+        delete "${tmpAnnotationTools}/.hgignore"
+        copy {
+            from projectDir
+            into tmpAnnotationTools
+            include "annotation-file-format.dvi"
+            include "annotation-file-format.html"
+            include "annotation-file-format.pdf"
+            include "annotation-file-utilities-all.jar"
+        }
+    }
+}
+
+task zipfile(type:Zip) {
+    description "create the distribution: annotation-tools.zip"
+    dependsOn(shadowJar, makeAnnotationFileFormat, testAnnotator, updateWorkspace)
+    archiveFileName  = 'annotation-tools.zip'
+    from  files(tmpAnnotationTools)
 }
